--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "d:\\FPL\\Web18311\\Lap5\\Bai1.html"
+    "livePreview.defaultPreviewPath": "/Lap4/Bai1.html"
 }
